--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:types": "payload generate:types"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@payloadcms/db-mongodb": "^3.36.0",
+    "@payloadcms/next": "^3.36.0",
+    "@payloadcms/payload-cloud": "^3.36.0",
+    "@payloadcms/richtext-lexical": "^3.36.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
@@ -41,15 +46,17 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "graphql": "^16.11.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "payload": "^3.36.0",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.6.7",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
-    "react-resizable-panels": "^2.1.8",
+    "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
